src/assets/css/qrcode.css
/* Override section width to accommodate QR Code designs */
.login-functional {
    @media (min-width: 769px) {
        max-width: 479px !important;
    }
}



/* Override some styles on tablet-sized screens to prevent tab headings from wrapping into new lines */
@media (max-width: 1200px) and (min-width: 768px) {
  body.login-page-container .login-tabs li {
    font-size: 12px !important;
    padding: 10px 8px;

  }
}
/* Prevent undesired animation for certain properties when changing screen widths */
body.login-page-container .login-tabs li {
    transition: font-size 0s, padding 0s, line-height 0s !important;
}



/* QR Code login tab heading */
#selectQrCodeSection {
    @media (max-width: 768px) {
        display: none !important;
    }
}



/* QR Code login tab body */
#qrcode-login {
    box-sizing: border-box;
    margin-top: -40px;

    @media (max-width: 768px) {
        display: none !important;
    }

    @media (max-width: 1399px) and (min-width: 768px) {
        margin-top: -20px;
    }

    * {
        box-sizing: border-box;
    }

    img {
        max-width: 100%;
    }

    .qrcode-login-body {
        padding: 16px;
        background: #F2F7FD;

        @media (max-width: 1200px) and (min-width: 768px) {
            padding: 20px;
        }
    }

    .qrcode-login-body-inner {
        display: flex;
        flex-direction: row;

        @media (max-width: 1200px) and (min-width: 768px) {
            flex-direction: column-reverse;
            align-items: center;
        }

        .qrlb-col-1 {
            width: 59.367946%;
            padding-right: 12px;

            @media (max-width: 1200px) and (min-width: 768px) {
                margin-top: 20px;
                padding-right: 0;
                width: 100%;
            }
        }

        .qrlb-col-2 {
            width: 40.632054%;

            @media (max-width: 1200px) and (min-width: 768px) {
                width: 48.109966%;
            }
        }
        .qrlb-col-2-inner {
            background: #ffffff;
            padding: 16px;
            box-shadow: 0px 1px 20px 0px rgba(213, 213, 234, 0.7);

            @media (max-width: 1200px) and (min-width: 768px) {
                padding: 10px 20px;
            }
        }

        .qrlb-heading {
            font-size: 18px;
            font-weight: 600;
            margin: 0;

            @media (max-width: 1200px) and (min-width: 768px) {
                font-size: 14px;
            }
        }
        .qrlb-subheading {
            font-weight: 700;
            text-align: center;
            margin: 0 auto 10px;
        }
        .qrlb-instructions {
            margin: 30px 0 16px;
            padding: 0 0 0 20px;

            @media (max-width: 1200px) and (min-width: 768px) {
                margin: 10px 0 0;
                font-size: 12px;
            }

            li {
                margin-bottom: 16px;

                @media (max-width: 1200px) and (min-width: 768px) {
                    margin-bottom: 10px;
                }

                &:last-child {
                    margin-bottom: 0;
                }
            }
        }

        .qrcode-container {
            img {
                box-shadow: 0px 1px 20px 0px rgba(213, 213, 234, 0.7);
                border-radius: 12px;
            }
        }
    }
}



/* Image switching styling */
#ImageAboveFooterOnLoginPage img {
    display: none;

    &.active {
        display: block;
    }
}



/* Override image width styles */
body.login-page-container .divide-form.order-first {
    @media (min-width: 768px) {
        box-sizing: border-box;
        padding-right: 10px;
    }

    img {
        @media (min-width: 768px) {
            width: 100% !important;
            height: auto !important;
            padding: 0 !important;
        }
    }
}

